--- a/aws/res/values/strings.xml
+++ b/aws/res/values/strings.xml
@@ -16,26 +16,28 @@
 	<string name="menu_about">About</string>
 	<string name="preference_title">android web server settings</string>
 	<string name="about_title">About AWS</string>
-<string name="pref_dirlisting_key">prefDirectotylisting</string>
-<string name="pref_dirlisting_title">Directory Listing</string>
-<string name="pref_dirlisting_summary">Enable/Disable Directory Listing</string>
-<string name="pref_dir_title">Directory</string>
-<string name="pref_dir_message">Enter the SDCARD directory to list (don\'t prepend /, if blank the SDCARD root folder will be listed).\n</string>
-<string name="pref_dir_key">prefDirectotylisting</string>
-<string name="pref_dir_summary">Select SDCARD the directory to list</string>
-<string name="pref_dirlisting_section_title">Directory Listing</string>
-<string name="pref_notification_section_title">Message Notification</string>
-<string name="pref_vibrate_key">prefVibrate</string>
-<string name="pref_vibrate_title">Vibrate</string>
-<string name="pref_vibrate_summary">Vibrate when message is received</string>
-<string name="pref_playsound_key">prefPlaysound</string>
-<string name="pref_playsound_title">Play sound</string>
-<string name="pref_playsound_summary">Play sound when message is received</string>
-<string name="play_ringtone_key">prefMessageringtone</string>
-<string name="play_ringtone_title">Message Ringtone</string>
-<string name="pref_ringtone_summary">Select ringtone to play when a message is received</string>
-<string name="pref_serverport_title">Server Port</string>
-<string name="pref_serverport_section_title">Server Port</string>
-<string name="pref_serverport_message">Enter server port.\n</string>
-<string name="pref_serverport_summary">Enter server port</string>
+	<string name="pref_dirlisting_key">prefDirectotylisting</string>
+	<string name="pref_dirlisting_title">Directory Listing</string>
+	<string name="pref_dirlisting_summary">Enable/Disable Directory Listing</string>
+	<string name="pref_dir_title">Directory</string>
+	<string name="pref_dir_message">Enter the SDCARD directory to list (don\'t prepend /, if blank the SDCARD root folder will be listed).\n</string>
+	<string name="pref_dir_key">prefDirectotylisting</string>
+	<string name="pref_dir_summary">Select SDCARD the directory to list</string>
+	<string name="pref_dirlisting_section_title">Directory Listing</string>
+	<string name="pref_notification_section_title">Message Notification</string>
+	<string name="pref_vibrate_key">prefVibrate</string>
+	<string name="pref_vibrate_title">Vibrate</string>
+	<string name="pref_vibrate_summary">Vibrate when message is received</string>
+	<string name="pref_playsound_key">prefPlaysound</string>
+	<string name="pref_playsound_title">Play sound</string>
+	<string name="pref_playsound_summary">Play sound when message is received</string>
+	<string name="play_ringtone_key">prefMessageringtone</string>
+	<string name="play_ringtone_title">Message Ringtone</string>
+	<string name="pref_ringtone_summary">Select ringtone to play when a message is received</string>
+	<string name="pref_serverport_title">Server Port</string>
+	<string name="pref_serverport_section_title">Server Port</string>
+	<string name="pref_serverport_message">Enter server port.\n</string>
+	<string name="pref_serverport_summary">Enter server port</string>
+	<string name="log_running">aws is running...</string>
+	<string name="log_notrunning">aws is stopped...</string>
 </resources>
